--- a/styles/page/page1.css
+++ b/styles/page/page1.css
@@ -3,3 +3,4 @@
 @import url(../logo/logo.css);
 @import url(../lang/lang.css);
 @import url(../lang/__link/lang__link.css);
+@import url(../lang/__link/_selected/lang__link_selected.css);
