--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -5,4 +5,17 @@
     justify-content: space-between;
     align-items: center;
     padding: 28px 48px;
+    min-width: 288px;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 28px 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header {
+        padding: 16px;
+    }
 }
