--- a/styles/logo/logo.css
+++ b/styles/logo/logo.css
@@ -1,3 +1,16 @@
 .logo {
+    max-width: 176px;
+    min-width: 142px;
+}
 
+@media screen and (max-width: 768px) {
+    .logo {
+        width: 176px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .logo {
+        width: 142px;
+    }
 }
