--- a/styles/page/page1.css
+++ b/styles/page/page1.css
@@ -1,6 +1,14 @@
+@import url(page.css);
 @import url(../header/header.css);
 @import url(../normalize.css);
 @import url(../logo/logo.css);
 @import url(../lang/lang.css);
 @import url(../lang/__link/lang__link.css);
-@import url(../lang/__link/_selected/lang__link_selected.css);
+@import url(../lang/__link/lang__link_selected.css);
+@import url(../lead/lead.css);
+@import url(../lead/__title/lead__title.css);
+@import url(../lead/__subtitle/lead__subtitle.css);
+@import url(../lead/__image/lead__image.css);
+@import url(../lead/__image-road/lead__image-road.css);
+@import url(../lead/__image-photo/lead__image-photo.css);
+@import url(../lead/__caption/lead__caption.css);
