--- a/styles/lead/__subtitle/lead__subtitle.css
+++ b/styles/lead/__subtitle/lead__subtitle.css
@@ -8,3 +8,37 @@
     width: 65%;
     margin: 32px 0 64px;
 }
+
+@media screen and (max-width: 1024px) {
+    .lead__subtitle {
+        margin: 32px 0 56px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__subtitle {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .lead__subtitle {
+        font-size: 25px;
+        line-height: 33.6px;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .lead__subtitle {
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__subtitle {
+        margin: 16px 0 40px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+}
