--- a/styles/lead/__title/lead__title.css
+++ b/styles/lead/__title/lead__title.css
@@ -6,5 +6,33 @@
     line-height: 100px;
     text-align: center;
     margin: 0 0;
-    width: 73%;
+    max-width: 720px;
+}
+
+@media screen and (max-width: 700px) {
+    .lead__title {
+        font-size: 80px;
+        line-height: 83px;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .lead__title {
+        font-size: 60px;
+        line-height: 62.5px;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .lead__title {
+        font-size: 46px;
+        line-height: 47px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__title {
+        font-size: 40px;
+        line-height: 44px;
+    }
 }
