--- a/styles/lead/lead.css
+++ b/styles/lead/lead.css
@@ -2,7 +2,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+    margin: 68px auto 0;
     padding-bottom: 92px;
-    width: 77%;
+    width: 77vw;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead {
+        width: 90vw;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        margin-top: 48px;
+    }
 }
