--- a/styles/page/page1.css
+++ b/styles/page/page1.css
@@ -12,3 +12,8 @@
 @import url(../lead/__image-road/lead__image-road.css);
 @import url(../lead/__image-photo/lead__image-photo.css);
 @import url(../lead/__caption/lead__caption.css);
+@import url(../intro/intro.css);
+@import url(../intro/__title/intro__title.css);
+@import url(../intro/__text/intro__text.css);
+@import url(../intro/__list/intro__list.css);
+@import url(../intro/__list/intro__list_thin.css);
