added adaptability to intro

--- a/styles/lead/__image-road/lead__image-road.css
+++ b/styles/lead/__image-road/lead__image-road.css
@@ -1,6 +1,6 @@
 .lead__image-road {
     position: absolute;
-    min-width: 70vw;
+    width: 70vw;
     top: 633px;
     left: 50%;
     transform: translate(-50%, 0);
