--- a/styles/intro/__title/intro__title.css
+++ b/styles/intro/__title/intro__title.css
@@ -7,3 +7,10 @@
     text-align: left;
     margin: 0;
 }
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
