--- a/styles/intro/intro.css
+++ b/styles/intro/intro.css
@@ -6,3 +6,23 @@
     padding-bottom: 92px;
     padding-right: 33vw;
 }
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        width: 67vw;
+        padding-right: 23vw;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro {
+        width: 94vw;
+        padding-right: 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        width: 90vw;
+    }
+}
