--- a/styles/place/__paragraph/place__paragraph.css
+++ b/styles/place/__paragraph/place__paragraph.css
@@ -5,8 +5,15 @@
     font-weight: 400;
     line-height: 29.34px;
     text-align: left;
-    margin: 0 0 26px;
+    margin: 0;
     grid-area: text;
     display: flex;
     flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+        width: 94vw;
+    }    
 }
