--- a/styles/place/__title/place__title.css
+++ b/styles/place/__title/place__title.css
@@ -7,4 +7,27 @@
     text-align: left;
     margin: 0;
     align-self: end;
+    grid-area: title;
+}
+
+@media screen and (max-width: 880px){
+    .place__title{
+        font-size: 62px;
+        line-height: 68px;
+    }
+    
+}
+
+@media screen and (max-width: 768px){
+    .place__title{
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 498px) {
+    .place__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
