--- a/styles/place/place.css
+++ b/styles/place/place.css
@@ -1,6 +1,6 @@
 .place {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 40vw 1fr;
     grid-template-rows: repeat(3, minmax(1fr));
     grid-auto-flow: row;
     grid-template-areas:
@@ -13,4 +13,31 @@
 
 .place:last-of-type {
     margin-bottom: 0;
+}
+
+@media screen and (max-width: 1024px){
+    .place {
+        grid-template-columns: 43vw 1fr;
+        gap: 32px;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    .place {
+        grid-template-columns: 44.4vw 1fr;
+        gap: 28px;
+    }
+}
+
+@media screen and (max-width: 498px) {
+    .place {
+        grid-template-columns: 94vw;
+        grid-template-rows: repeat(4, minmax(1fr));
+        grid-template-areas:
+        "title"
+        "url"
+        "photo"
+        "text";
+        gap: 32px;
+    }
 }
