--- a/styles/places/places.css
+++ b/styles/places/places.css
@@ -6,3 +6,15 @@
     margin: 0 auto;
     padding-bottom: 92px;
 }
+
+@media screen and (max-width: 1024px){
+    .places {
+        width: 90vw;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
+        width: 94vw;
+    }
+}
