--- a/styles/footer/__link/footer__link.css
+++ b/styles/footer/__link/footer__link.css
@@ -14,6 +14,11 @@
     color: #FFFFFF;
 }
 
+.footer__link:hover {
+    opacity: 0.8;
+    transition: opacity .5s;
+}
+
 .footer__link:last-of-type {
     margin: 0;
 }
